[package]
name = "assayinganomalies"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
indicatif = "0.17.9"
log = "0.4.22"
native-tls = "0.2.12"
polars = { version = "0.45.1", features = ['serde', 'lazy', 'parquet'] }
postgres-native-tls = "0.5.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ['with-chrono-0_4'] }

[profile.dev]
incremental = true
